[package]
name = "quick-start"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.12"
bytes = "1.4.0"
futures = "0.3.28"
http = "0.2.9"
#http-body = "0.4.5"
#hyper = "0.14.26"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace", "fs"] }

#tower = { version = "0.4", features = ["util"] }
#tower-http = { version = "0.4.0", features = ["full"] }


tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
